maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:54: error: not found: value i
		chemin(i,j);
                       ^